--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@google/genai": "^1.33.0",
     "lucide-react": "^0.561.0",
     "framer-motion": "^12.23.26",
-    "pptxgenjs": "3.12.0"
+    "pptxgenjs": "3.12.0",
+    "recharts": "2.12.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
